# agentshield

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_ZH.md  LICENSE  Makefile  README.md  README_ZH.md  SECURITY.md  pyproject.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  integration_request.yml  security_rule.yml
.github/workflows/: ci.yml
configs/: builtin_rules.yaml  default_policy.yaml  trust_source_mapping.yaml
docker/: Dockerfile.console  Dockerfile.core  Dockerfile.proxy  docker-compose.test.yml  docker-compose.yml
docs/: openapi.json
examples/: custom_rules.py  data_sanitization.py  harness_demo.py  langchain_integration.py  prompt_injection_demo.py  quickstart.py
scripts/: dev-setup.sh  run-attack-samples.sh
