[project]
name = "agentshield-monorepo"
version = "1.0.0"
description = "AI Agent Runtime Security Platform"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/proxy",
    "packages/sdk-python",
    "packages/console/backend",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ARG"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
